small fix to scrollbar issue on chrome/windows

--- a/ffai/web/static/less/style.less
+++ b/ffai/web/static/less/style.less
@@ -488,7 +488,6 @@ a, a:focus, a:hover {
             }
 
             .skill-box {
-                overflow: scroll;
                 width: 100%;
             }
         }
